<resources>
    <string name="app_name">Local Apparel</string>
    <string name="email_Message">Enter Email Here</string>
    <string name="password_Message">Enter Password Here</string>
    <string name="register_success_string">Registration successful!</string>
    <string name="register_failed_string">Registration failed! Please try again later</string>
    <string name="email_hint_string">Email</string>
    <string name="password_hint_string">Password</string>
    <string name="fill_name_hint_string">Full Name</string>
    <string name="confirm_pass_hint_string">Confirm Password</string>
    <string name="zip_code_hint_string">Zip Code</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="list_item">LIST ITEM</string>
    <string name="log_out">LOG OUT</string>
    <string name="contact_seller">Contact Seller</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_user_fragment">Hello user fragment</string>
    <string name="hello_buy_fragment">Hello buy fragment</string>
    <string name="hello_sell_fragment">Hello sell fragment</string>
    <string name="hello_chat_fragment">Hello chat fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
