<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/app_background"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_login"
        android:layout_marginTop="-120dp"/>


    <EditText
        android:id="@+id/email_view"
        android:layout_width="340dp"
        android:layout_height="55dp"
        android:layout_marginTop="70dp"
        android:ems="15"
        android:hint="@string/email_hint_string"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/colorButtonRed"
        android:textCursorDrawable="@color/colorButtonRed"
        android:textColorHighlight="@color/colorAppBackground"/>


    <EditText
        android:id="@+id/password_view"
        android:layout_width="340dp"
        android:layout_height="55dp"
        android:ems="15"
        android:hint="@string/password_hint_string"
        android:inputType="textPassword"
        android:backgroundTint="@color/colorButtonRed"
        android:textCursorDrawable="@color/colorButtonRed"/>


    <Button
        android:id="@+id/registerButtonView"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/custom_butn"

        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/log_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorAppBackground" />



</LinearLayout>
