<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/confirmPassword_view"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="350dp"
        android:ems="10"
        android:hint="@string/confirm_pass_hint_string"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <EditText
        android:id="@+id/email_view"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="90dp"
        android:ems="10"
        android:hint="@string/email_hint_string"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.287" />

    <EditText
        android:id="@+id/password_view"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="350dp"
        android:ems="10"
        android:hint="@string/password_hint_string"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_view"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/registerButtonView"
        android:layout_width="237dp"
        android:layout_height="48dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/custom_butn"
        android:text="Register"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_view"
        app:layout_constraintVertical_bias="0.561" />

    <EditText
        android:id="@+id/fullName_view"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/fill_name_hint_string"
        android:inputType="textPostalAddress"
        app:layout_constraintBottom_toBottomOf="@+id/email_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705" />

    <EditText
        android:id="@+id/zipcode_View"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:hint="Zip Code"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />


</androidx.constraintlayout.widget.ConstraintLayout>